# shsml

./: .gitignore  CMakeLists.txt  LICENSE  README.md  test.cpp
include/: SHSML.hpp
tests/benchmark/: bench1.cpp
tests/unit_test/: multiply.cpp
